# resolver

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  compare_ezid_n2t_naans.py  crne.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: python-package.yml
_docsrc/: Makefile  build.sh  configuration.md  index.md  matching.md
_docsrc/assets/: matching.puml  pidmatch.puml
_docsrc/doc_parts/: __init__.py
docs/: Makefile  configuration.md  matching.md
docs/doc_parts/: __init__.py
notes/: ark-infrastructure-context.puml  matching.puml
rslv/: __init__.py  __main__.py  app.py  config.py  log_middleware.py  manage.py
rslv/lib_rslv/: __init__.py  n2tutils.py  nt2utils.py  piddefine.py  xn2tutils.py
rslv/routers/: __init__.py  resolver.py
rslv/routers/statics/: introspection.js
rslv/static/: style.css
rslv/templates/: index.html  introspection.html
scripts/: compare_ezid_n2t_naans.py  crne.py  gen_docs_parts.py  manage.py
tests/: test_get_request_identifier.py  test_identifiers_text.py  test_parser.py  test_service.py  test_splitter.py
