[tool.poetry]
name = "rslv"
version = "0.5.3"
description = "Provides an identifier resolver service in FastAPI."
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0"
pydantic-settings = "^2"
sqlalchemy = "^2"
jinja2 = "^3"

[tool.poetry_bumpversion.file."rslv/__init__.py"]

[tool.poetry.group.dev.dependencies]
pytest = "^7"
requests = "^2"
uvicorn = {extras = ["standard"], version = "^0"}
codebraid = "^0.11.0"
ruamel-yaml = "^0.18.6"
py-markdown-table = "^0.4.0"

[tool.poetry.scripts]
rslv = "rslv.__main__:main"

[tool.poetry.group.cli.dependencies]
click = "^8"
httpx = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
