[project]
name = "rslv"
version = "0.9.4"
description = "Provides an identifier resolver service in FastAPI."
authors = [
    {name = "datadavev",email = "605409+datadavev@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests = "^2.32.4"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
httpx = "^0.28.1"
flake8 = "^7.1.1"
black = "^25.1.0"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
click = "^8"
httpx = "^0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
codebraid = "^0.11.0"
ruamel-yaml = "^0.18.10"
py-markdown-table = "^1.2.0"

[tool.poetry_bumpversion.file."rslv/__init__.py"]

[project.scripts]
rslv = "rslv.__main__:main"

