[project]
name = "rslv"
version = "0.9.6"
description = "Provides an identifier resolver service in FastAPI."
authors = [{ name = "datadavev", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
]

[project.scripts]
rslv = "rslv.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "requests>=2.32.3,<3",
    "uvicorn[standard]>=0.34.0,<0.35",
    "httpx>=0.28.1,<0.29",
    "flake8>=7.1.1,<8",
    "black>=25.1.0,<26",
]
cli = [
    "click>=8,<9",
    "httpx>=0,<1",
]
docs = [
    "codebraid>=0.11.0,<0.12",
    "ruamel-yaml>=0.18.10,<0.19",
    "py-markdown-table>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "cli",
    "docs",
]

[tool.poetry_bumpversion.file."rslv/__init__.py"]

